# SolARModuleTools

./: .gitignore  .project  CMakeLists.txt  JenkinsFile  README.md  SolARModuleTools.pri  SolARModuleTools.pro  SolARModuleTools.sln  SolARModuleTools.vcxproj  SolARModuleTools.vcxproj.filters  bcom-SolARModuleTools.pc.in  doxyfile  packagedependencies-cmake.txt  packagedependencies.txt  xpcf_SolARMapper_sample_conf.xml  xpcf_SolARModuleTools_registry.xml  xpcf_SolARModuleTools_registry_debug.xml  xpcf_SolARModuleTools_registry_release.xml
interfaces/: SolAR2DTransform.h  SolAR3D3DcorrespondencesFinder.h  SolAR3DTransform.h  SolAR3DTransformEstimationFrom3D3D.h  SolAR3DTransformEstimationSACFrom3D3D.h  SolARBasicMatchesFilter.h  SolARBasicSink.h  SolARBasicSource.h  SolARBoostCovisibilityGraph.h  SolARCovisibilityGraph.h  SolARCovisibilityGraphManager.h  SolARFiducialMarkerPoseEstimator.h  SolARHomographyValidation.h  SolARImage2WorldMapper4Marker2D.h  SolARKeyframeSelector.h  SolARKeyframesManager.h  SolARKeyframesStorageSet.h  SolARKeypointsReIndexer.h  SolARLoopClosingDetector.h  SolARLoopClosureDetector.h  SolARLoopCorrector.h  SolARMapFilter.h  SolARMapManager.h  SolARMapUpdate.h  SolARMapper.h  SolARModuleManagerTools.h  SolARModuleTools_traits.h  SolAROverlapDetector.h  SolARPointCloudManager.h  SolARPointCloudStorageSet.h  SolARSBPatternReIndexer.h  SolARSLAMBootstrapper.h  SolARSLAMMapping.h  SolARSLAMTracking.h  SolARToolsAPI.h  SolARVisibilityStorageBiMap.h  ThirdPartyConnector.h
src/: SolAR2DTransform.cpp  SolAR3D3DcorrespondencesFinder.cpp  SolAR3DTransform.cpp  SolARBasicMatchesFilter.cpp  (+32 more)
(+80 files in other folders)
